# genAI_tavily_searchbot

./: README.md  app.py  internetRAG.ipynb  main.py  memory.db  practice.ipynb  streamlit_client.py  tools.py
genAI_tavily_seachbot/: agent.py  internet.ipynb  pyproject.toml
genAI_tavily_seachbot/data/: tavily_docs.json  tavily_docs.xlsx
