[project]
name = "news_summarizer"
version = "0.1.0"
description = ""
authors = [
    {name = "pavan kumar",email = "pavanvkalapati@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"

[tool.poetry]
packages = [
    { include = "news_summarizer" }
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
langchain = ">=0.3.22,<0.4.0"
langchain-openai = ">=0.3.11,<0.4.0"
langgraph = ">=0.3.24,<0.4.0"
tavily-python = "^0.5.4"
python-dotenv = "^1.1.0"
langchain-anthropic = "^0.3.10"
langchain-ollama = "^0.3.1"
langchain-google-genai = "^2.1.2"
langchain-groq = "0.3.8"
requests = "^2.32.5"
beautifulsoup4 = "^4.14.2"
newsapi-python = "^0.2.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"